# redis-commnet

./: .gitignore  README.md
redis-1.01/: 00-RELEASENOTES
redis-beta-6/redis-1.0-beta/: .gitignore  CMakeLists.txt  Makefile2  a.out  adlist.c  ae.c  ae.h  dict.c  dict.h  main.c  redis-server  redis.c  sds.c  sds.h  test.c  test1  test_struct_ptr_func.c
redis-beta-6/redis-1.0-beta/test/01/: Makefile1  main.c
